automate ansible inventory

--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -1,6 +1,5 @@
 name: Terraform CI
 
-
 on:
   push:
     branches:
@@ -9,16 +8,21 @@ on:
   pull_request:
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   terraform:
-    name: Terraform Format & Validate
+    name: Terraform Format, Validate & KeyVault
     runs-on: ubuntu-latest
+
     defaults:
       run:
         working-directory: terraform
 
     steps:
-      - name: Checkout
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
       - name: Setup Terraform
@@ -34,3 +38,30 @@ jobs:
 
       - name: Terraform Validate
         run: terraform validate
+
+      # ----------------------------
+      # Azure OIDC Login
+      # ----------------------------
+      - name: Azure Login via OIDC
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      # ----------------------------
+      # Fetch SSH Key from Key Vault
+      # ----------------------------
+      - name: Fetch SSH Key from Key Vault
+        run: |
+          KEY=$(az keyvault secret show \
+            --vault-name kv-rajneesh-dev \
+            --name vm-ssh-private-key \
+            --query value -o tsv)
+
+          mkdir -p ~/.ssh
+          echo "$KEY" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+
+      - name: Verify SSH Key
+        run: ls -la ~/.ssh
