--- a/ansible_vm_setup/inventory.ini
+++ b/ansible_vm_setup/inventory.ini
@@ -1,13 +1,19 @@
 [web]
-vm-web ansible_host=<WEB_PUBLIC_IP> ansible_user=azureuser
+vm-web ansible_host=20.219.141.246
 
 [app]
-vm-app ansible_host=10.0.2.4 ansible_user=azureuser
-vm-app ansible_ssh_common_args='-o ProxyJump=azureuser@<WEB_PUBLIC_IP>'
+vm-app ansible_host=10.0.2.4
 
 [db]
-vm-db ansible_host=10.0.3.4 ansible_user=azureuser
-vm-db ansible_ssh_common_args='-o ProxyJump=azureuser@<WEB_PUBLIC_IP>'
+vm-db ansible_host=10.0.3.4
+
+[private:children]
+app
+db
 
 [all:vars]
+ansible_user=azureuser
 ansible_ssh_private_key_file=~/.ssh/id_rsa
+
+[private:vars]
+ansible_ssh_common_args='-o ProxyJump=azureuser@20.219.141.246'
