--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -43,40 +43,18 @@ jobs:
       # ---------------------------------
       - name: Fetch SSH Key from Key Vault
         run: |
-          set -euo pipefail
           mkdir -p ~/.ssh
-          SECRET_VALUE="$(az keyvault secret show \
+          az keyvault secret show \
             --vault-name kv-rajneesh-prod \
             --name vm-ssh-private-key \
-            --query value -o tsv)"
+            --query value -o tsv > id_rsa
 
-          RAW="$(printf '%s' "$SECRET_VALUE" | tr -d '\r')"
-          UNESCAPED="$(printf '%s' "$RAW" | sed 's/\\n/\n/g')"
-
-          write_if_valid() {
-            CONTENT="$1"
-            printf '%s\n' "$CONTENT" > ~/.ssh/id_rsa
-            chmod 600 ~/.ssh/id_rsa
-            ssh-keygen -y -f ~/.ssh/id_rsa >/dev/null 2>&1
-          }
-
-          if write_if_valid "$RAW"; then
-            echo "Loaded SSH key from raw secret value."
-          elif write_if_valid "$UNESCAPED"; then
-            echo "Loaded SSH key from unescaped newline secret value."
-          elif printf '%s' "$RAW" | base64 -d > ~/.ssh/id_rsa 2>/dev/null && chmod 600 ~/.ssh/id_rsa && ssh-keygen -y -f ~/.ssh/id_rsa >/dev/null 2>&1; then
-            echo "Loaded SSH key from base64-decoded raw secret value."
-          elif printf '%s' "$UNESCAPED" | base64 -d > ~/.ssh/id_rsa 2>/dev/null && chmod 600 ~/.ssh/id_rsa && ssh-keygen -y -f ~/.ssh/id_rsa >/dev/null 2>&1; then
-            echo "Loaded SSH key from base64-decoded unescaped secret value."
-          else
-            echo "Key Vault secret vm-ssh-private-key is not a valid OpenSSH private key format."
-            exit 1
-          fi
+          chmod 600 id_rsa
 
       - name: Generate Public Key
         run: |
-          ssh-keygen -y -f ~/.ssh/id_rsa > ~/.ssh/id_rsa.pub
-          chmod 644 ~/.ssh/id_rsa.pub
+          ssh-keygen -y -f id_rsa > id_rsa.pub
+          chmod 644 id_rsa.pub
 
       # ---------------------------------
       # Setup Terraform
