--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -14,7 +14,7 @@ permissions:
 
 jobs:
   terraform:
-    name: Terraform Plan & Apply
+    name: Terraform Plan, Apply & Destroy
     runs-on: ubuntu-latest
 
     defaults:
@@ -47,14 +47,14 @@ jobs:
           az keyvault secret show \
             --vault-name kv-rajneesh-prod \
             --name vm-ssh-private-key \
-            --query value -o tsv > id_rsa
+            --query value -o tsv > ~/.ssh/id_rsa
 
-          chmod 600 id_rsa
+          chmod 600 ~/.ssh/id_rsa
 
       - name: Generate Public Key
         run: |
-          ssh-keygen -y -f id_rsa > id_rsa.pub
-          chmod 644 id_rsa.pub
+          ssh-keygen -y -f ~/.ssh/id_rsa > ~/.ssh/id_rsa.pub
+          chmod 644 ~/.ssh/id_rsa.pub
 
       # ---------------------------------
       # Setup Terraform
@@ -79,8 +79,14 @@ jobs:
       - name: Generate Ansible Inventory
         run: terraform output -raw ansible_inventory > ../ansible_vm_setup/inventory.ini
 
-      - name: Verify SSH Key
-        run: ls -la ~/.ssh
+      # ---------------------------------
+      # WAIT 10 MINUTES
+      # ---------------------------------
+      - name: Wait 10 minutes before destroy
+        run: sleep 600
 
-      - name: Terraform destroy
+      # ---------------------------------
+      # Destroy
+      # ---------------------------------
+      - name: Terraform Destroy
         run: terraform destroy -auto-approve
