--- a/ansible_vm_setup/inventory.ini
+++ b/ansible_vm_setup/inventory.ini
@@ -1,19 +1,19 @@
 [web]
-vm-web ansible_host=20.219.141.246
+vm-web ansible_host=automatically assigned by terraform
 
 [app]
-vm-app ansible_host=10.0.2.4
+vm-app ansible_host=automatically assigned by terraform
 
 [db]
-vm-db ansible_host=10.0.3.4
+vm-db ansible_host=automatically assigned by terraform  
 
 [private:children]
 app
 db
 
 [all:vars]
-ansible_user=azureuser
+ansible_user=automatically assigned by terraform
 ansible_ssh_private_key_file=~/.ssh/id_rsa
 
 [private:vars]
-ansible_ssh_common_args='-o ProxyJump=azureuser@20.219.141.246'
+ansible_ssh_common_args='-o ProxyJump=automatically@2auto-assigned jump host IP'
