--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -53,8 +53,13 @@ jobs:
 
       - name: Generate Public Key
         run: |
-          ssh-keygen -y -f ~/.ssh/id_rsa > ~/.ssh/id_rsa.pub
-          chmod 644 ~/.ssh/id_rsa.pub
+          
+          az keyvault secret show \
+            --vault-name kv-rajneesh-prod \
+            --name vm-ssh-key \
+            --query value -o tsv > ~/.ssh/id_rsa.pub
+
+          chmod 600 ~/.ssh/id_rsa.pub
 
       # ---------------------------------
       # Setup Terraform
