--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -53,13 +53,12 @@ jobs:
 
       - name: Generate Public Key
         run: |
-          
-          az keyvault secret show \
-            --vault-name kv-rajneesh-prod \
-            --name vm-ssh-key \
-            --query value -o tsv > ~/.ssh/id_rsa.pub
+          ssh-keygen -y -f ~/.ssh/id_rsa > ~/.ssh/id_rsa.pub
+          chmod 644 ~/.ssh/id_rsa.pub
 
-          chmod 600 ~/.ssh/id_rsa.pub
+      - name: Export Terraform SSH Public Key Variable
+        run: |
+          echo "TF_VAR_admin_ssh_public_key=$(cat ~/.ssh/id_rsa.pub)" >> "$GITHUB_ENV"
 
       # ---------------------------------
       # Setup Terraform
@@ -79,7 +78,7 @@ jobs:
         run: terraform plan
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve
+        run: terraform apply -auto-approve -var "admin_ssh_public_key=$(cat ~/.ssh/id_rsa.pub)"
 
       - name: Generate Ansible Inventory
         run: terraform output -raw ansible_inventory > ../ansible_vm_setup/inventory.ini
