--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -88,6 +88,32 @@ jobs:
       - name: Generate Ansible Inventory
         run: terraform output 
 
+      - name: Install Ansible
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ansible
+
+      - name: Wait for SSH on vm1
+        run: |
+          VM1_PUBLIC_IP="$(terraform output -raw vm1_public_ip)"
+          for i in $(seq 1 30); do
+            if ssh -o StrictHostKeyChecking=no -o ConnectTimeout=10 -i ~/.ssh/id_rsa azureuser@"$VM1_PUBLIC_IP" "echo ssh-ok" >/dev/null 2>&1; then
+              echo "SSH is ready on vm1."
+              exit 0
+            fi
+            echo "Waiting for SSH on vm1... attempt $i/30"
+            sleep 20
+          done
+          echo "SSH did not become ready on vm1."
+          exit 1
+
+      - name: Run Ansible Playbook
+        working-directory: ansible_vm_setup
+        run: ansible-playbook -i inventory.ini playbook.yml
+
+      # ---------------------------------
+
+
       # ---------------------------------
       # WAIT 10 MINUTES
       # ---------------------------------
