--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -69,7 +69,21 @@ jobs:
           terraform_version: 1.6.6
 
       - name: Terraform Init
-        run: terraform init
+        env:
+          TF_BACKEND_RESOURCE_GROUP: ${{ secrets.TF_BACKEND_RESOURCE_GROUP }}
+          TF_BACKEND_STORAGE_ACCOUNT: ${{ secrets.TF_BACKEND_STORAGE_ACCOUNT }}
+          TF_BACKEND_CONTAINER: ${{ secrets.TF_BACKEND_CONTAINER }}
+          TF_BACKEND_KEY: ${{ secrets.TF_BACKEND_KEY }}
+        run: |
+          if [ -n "${TF_BACKEND_RESOURCE_GROUP}" ] && [ -n "${TF_BACKEND_STORAGE_ACCOUNT}" ] && [ -n "${TF_BACKEND_CONTAINER}" ] && [ -n "${TF_BACKEND_KEY}" ]; then
+            terraform init -reconfigure \
+              -backend-config="resource_group_name=${TF_BACKEND_RESOURCE_GROUP}" \
+              -backend-config="storage_account_name=${TF_BACKEND_STORAGE_ACCOUNT}" \
+              -backend-config="container_name=${TF_BACKEND_CONTAINER}" \
+              -backend-config="key=${TF_BACKEND_KEY}"
+          else
+            terraform init -backend=false
+          fi
 
       - name: Terraform Validate
         run: terraform validate
